apps/base/home-nodered/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
spec:
  ports:
  - port: 80
    targetPort: nodered
  selector:
    app.kubernetes.io/name: nodered
    app.kubernetes.io/component: nodered
