apps/base/home-nodered/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-nodered
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: nodered
      app.kubernetes.io/component: nodered

  ingress:
    # Allow from the ingress controller
    - ports:
        - port: nodered
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
